Fixes bug with menu where thumbs bleeding through on pg change

--- a/src/components/menu/menu.sass
+++ b/src/components/menu/menu.sass
@@ -84,7 +84,9 @@
   &__link-wrapper
     display: flex
     position: relative
-    transition: transform .85s cubic-bezier(.51, .92, .24, 1) .35s, padding .25s ease-in-out .85s
+    // transition z-index to delay current class being removed - avoids thumbs displaying while fading
+    transition: transform .85s cubic-bezier(.51, .92, .24, 1) .35s, padding .25s ease-in-out .85s, z-index .35s linear .85s
+    z-index: 1
     padding: .5rem
 
     &--current
@@ -120,6 +122,7 @@
         width: 100%
         height: 100%
 
+      // where the magic happens transform 4x large, and translate to center before expanding
       &:first-child
         transform: translate(100%, 50%) matrix(4, 0, 0, 4, 0, 0)
 
@@ -149,7 +152,6 @@
     background: linear-gradient(180deg, rgba($black, .25), transparent)
     width: 100%
     height: 100%
-
 
   &__submenu
     @extend .flex
